[package]
name = "nnsplit-unblocked"
version = "0.1.0"
edition = "2021"

[lib]
name = "nnsplit_unblocked"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
nnsplit = { version = "0.5.9", features = ["tract-backend", "model-loader"] }

[dependencies.pyo3]
version = "0.22.0"
features = ["abi3-py310"]
